修复样板迁移进度条与预览滚动条